--- a/style.css
+++ b/style.css
@@ -52,23 +52,74 @@ body {
 
 /* 1st button  */
 .button {
-    padding-top: 20px;
+    float: left;
+    margin: 50px 70px;
+    padding: 15px 75px;
+    background-image: linear-gradient(to right, lightgreen, cyan);
+    border-radius: 7px;
+    transition: 2s ease;
+    transition: transform 0.5s;
 
 }
 
 .watch-live-button {
-
-    padding: 15px 25px;
     text-decoration: none;
-    background-image: linear-gradient(to right, lightgreen, cyan);
-    border-radius: 10px;
-
 }
+
+.button:hover {
+    background-image: linear-gradient(to right, cyan, lightgreen);
+    transform: scaleX(1.1);
+}
+
+
 
 /* img area */
 .heading-img-area {
+    position: relative;
     width: 50%;
+    animation-name: shake;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
 
+}
+
+@keyframes shake {
+    0% {
+        left: 0
+    }
+
+    10% {
+        left: -10px
+    }
+
+    20% {
+        left: 10px
+    }
+
+    30% {
+        left: -10px
+    }
+
+    50% {
+        left: 10px
+    }
+
+    70% {
+        left: -10px
+    }
+
+    80% {
+        left: 10px
+    }
+
+    90% {
+        left: -10px
+    }
+
+    100% {
+        left: 0
+    }
 }
 
 .heading-img-area img {
@@ -134,14 +185,15 @@ main body area
 .card-section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 40px;
 
 }
 
-
+.card-button-div {
+    margin-top: 20px;
+}
 
 .card-button {
-
     margin-top: 40px;
     padding: 5px 10px;
     text-decoration: none;
@@ -162,18 +214,25 @@ main body area
     background-color: rgb(32, 1, 44);
 }
 
+.footer-title-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .footer-title {
+    text-align: center;
     font-size: 40px;
     color: white;
-    text-align: center;
-
+    border-bottom: 2px solid gray;
+    width: 1000px;
 }
 
 
 
 .about-us {
     text-align: center;
-
+    margin-top: 40px;
 }
 
 .condition {
@@ -193,7 +252,6 @@ main body area
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .icon {
@@ -205,5 +263,61 @@ main body area
 
 .icon:hover {
     color: #787885;
+
+}
+
+
+
+
+/* tab area */
+
+
+.view-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tab-button {
+    display: none;
+}
+
+
+@media only screen and (max-width: 820px) {
+    .heading-area h1 {
+        font-size: 25px;
+        color: white;
+    }
+
+    .header-main {
+        padding: 50px 50px;
+    }
+
+    .button {
+        float: left;
+        margin: 10px 0px;
+        padding: 10px 10px;
+    }
+
+    .heading-img-area img {
+        width: 100%;
+        padding-top: 65px;
+    }
+
+    .card-section {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+
+    .main-section {
+        padding: 60px 0px;
+        display: flex;
+    }
+
+    .card-main {
+        padding-left: 78px;
+
+    }
 
 }
